# bible-reading-plan

./: .gitignore  CHANGELOG.md  LICENSE  bible-reading-plan.txt  bible.cabal
src/: Bible.hs  DPPartition.hs
