cabal-version:      3.0
name:               bible
version:            0.1.0.0
-- synopsis:
-- description:
license:            BSD-3-Clause
license-file:       LICENSE
author:             Brent Yorgey
maintainer:         byorgey@gmail.com
-- copyright:
category:           Text
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

executable bible
    import:           warnings
    main-is:          Main.hs
    -- other-modules:
    -- other-extensions:
    build-depends:    base, bible
    hs-source-dirs:   app
    default-language: Haskell2010

library
    hs-source-dirs:   src
    default-language: Haskell2010
    build-depends:    array >= 0.5 && < 0.6,
                      base,
                      containers >= 0.6 && < 0.8,
                      extra >= 1.7 && < 1.8,
                      mtl
    exposed-modules:  Bible
    other-modules:    DPPartition
